objects/Work_Element_Reviewer_Role__c.object
<CustomObject>
    <fields>
        <fullName>Role_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Role ID</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Process Work Element Reviewer Roles</relationshipLabel>
        <relationshipName>Work_Element_Reviewer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role_ID__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Element_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Work Element ID</label>
        <referenceTo>Work_Element__c</referenceTo>
        <relationshipLabel>Process Work Element Reviewer Roles</relationshipLabel>
        <relationshipName>Work_Element_Reviewer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Element_Name__c</fullName>
        <formula>Work_Element_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Work Element Name</label>
        <type>Text</type>
    </fields>
    <label>Process Work Element Reviewer Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PWERR-{00000000}</displayFormat>
        <label>Process Work Element Reviewer RoleID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Work Element Reviewer Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>